; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_regional.c_regional_alloc_zero.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_regional.c_regional_alloc_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regional = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @regional_alloc_zero(%struct.regional* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.regional*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store %struct.regional* %0, %struct.regional** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.regional*, %struct.regional** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i8* @regional_alloc(%struct.regional* %7, i64 %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @memset(i8* %14, i32 0, i64 %15)
  %17 = load i8*, i8** %6, align 8
  store i8* %17, i8** %3, align 8
  br label %18

18:                                               ; preds = %13, %12
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local i8* @regional_alloc(%struct.regional*, i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
